force-app/main/default/objects/Scheduling_Config__mdt/Scheduling_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration settings for the scheduling application</description>
    <label>Scheduling Config</label>
    <pluralLabel>Scheduling Configs</pluralLabel>
</CustomObject>