force-app/main/default/objects/Scheduling_Config__mdt/fields/Default_Booking_Window_Days__c.field-meta.xml
<CustomField>
    <fullName>Default_Booking_Window_Days__c</fullName>
    <description>Default booking window in days for new event types</description>
    <label>Default Booking Window (Days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>