force-app/main/default/objects/Scheduling_Config__mdt/fields/Default_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Default_Duration_Minutes__c</fullName>
    <description>Default meeting duration for new event types</description>
    <label>Default Duration (Minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>