force-app/main/default/objects/Scheduling_Config__mdt/fields/Default_Min_Notice_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Default_Min_Notice_Minutes__c</fullName>
    <description>Default minimum booking notice for new event types</description>
    <label>Default Min Notice (Minutes)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>