force-app/main/default/objects/Scheduling_Config__mdt/fields/Enable_Calendar_Sync__c.field-meta.xml
<CustomField>
    <fullName>Enable_Calendar_Sync__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether to sync bookings with external calendars</description>
    <label>Enable Calendar Sync</label>
    <type>Checkbox</type>
</CustomField>