force-app/main/default/objects/Scheduling_Config__mdt/fields/Enable_Email_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Enable_Email_Notifications__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether to send email notifications for booking events</description>
    <label>Enable Email Notifications</label>
    <type>Checkbox</type>
</CustomField>