force-app/main/default/objects/Scheduling_Config__mdt/fields/Max_Recurring_Occurrences__c.field-meta.xml
<CustomField>
    <fullName>Max_Recurring_Occurrences__c</fullName>
    <description>Maximum number of occurrences allowed in a recurring series</description>
    <label>Max Recurring Occurrences</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>